--- a/main_estilo.css
+++ b/main_estilo.css
@@ -20,6 +20,9 @@
     height: 500px;
     color: blueviolet;
     background-color:#FFD500;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -57,4 +60,50 @@
     height: 600px;
     color: black;
     background-color: white; 
+}
+
+#perguntas{
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    margin-top: 20px;
+    width: 100%;
+    height: 80%;
+}
+
+#respostas{
+    background-color: white;
+    width: 50%;
+    height: 90%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+#sim{
+    width: 100%;
+    height: 20%;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 20px 20px 20px 20px;
+}
+
+#nao{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 20%;
+    font-size: 40px;
+    background-color: transparent;
+    border-radius: 20px 20px 20px 20px;
 }
