--- a/templates/mainteste.html
+++ b/templates/mainteste.html
@@ -37,34 +37,50 @@
         </div>
       </nav>
 
-      <section class="Apresentacao">
-        <div class="Imagem_psicologa">
-        <img src="https://i0.wp.com/qualquerlatitude.com.br/wp-content/uploads/2021/10/IMG_5756-e1636653015795.jpg?fit=1000%2C1122&ssl=1" alt="teste" class="imagem">
+    <section class="boas-vindas">
+      <div class="recepcao">
+        <h2>Bem-Vindo <br> ao seu lugar seguro</h2>
+        <p>Aqui cuidamos da saúde mental e das emoções, com acolhimento, técnica e criatividade</p>
       </div>
-        <div class="Apresentacao_psicologa">
-            <h2> Sobre mim</h2>
-            <p>Dra. [Nome da Psicóloga]
-              Psicóloga Clínica | Especialista em Saúde Mental e Bem-Estar Emocional
-              
-              Olá! Sou a Dra. [Nome da Psicóloga], psicóloga formada pela [Nome da Universidade] e com especialização em [área de especialização, como Terapia Cognitivo-Comportamental, Psicanálise, etc.]. Tenho mais de [X anos] de experiência ajudando pessoas a enfrentar desafios emocionais, melhorar sua qualidade de vida e alcançar seu potencial pleno.
-              
-              Minha abordagem é centrada no indivíduo, focando em criar um ambiente acolhedor e empático para que você se sinta seguro e compreendido. Trabalho com adolescentes, adultos e casais, abordando questões como:
-              
-              Ansiedade e estresse
-              Depressão
-              Desenvolvimento pessoal e autoestima
-              Relacionamentos interpessoais
-              Transições de vida e luto
-              Acredito que cada pessoa é única e, por isso, adapto minhas técnicas às necessidades específicas de cada cliente. Meu objetivo é caminhar ao seu lado, oferecendo suporte e ferramentas para que você possa construir uma vida mais equilibrada e satisfatória.
-              
-              Se você está pronto para iniciar essa jornada de autoconhecimento e transformação, estou aqui para ajudar. Vamos trabalhar juntos para que você possa viver de forma mais leve e autêntica.
-              
-              Entre em contato para agendar uma consulta ou para mais informações!</p>
-        </div>
+      <div class="divimgboas-vindas">
+        <img src="{{url_for('static', filename='img/Anielly Costa_Principal sem tagline@4x.png')}}" alt="An" class="imagem-boas-vindas">
+      </div>
+    </section>
 
-      </section>
+    <section class="produtos">
+      <div class="produto">
+        <p>Terapia Individual</p>
+        <a href="" onmouseenter="Mudar_cor_botao_geral_entrou()" onmouseleave="Mudar_cor_botao_geral_saiu()"><img src="{{url_for('static', filename='img/Anielly Costa_Símbolo positivo@4x.png')}}" alt="imgproduto" class="imgproduto"></a>
+      </div>
+    
+      <div class="produto">
+        <p>Terapia em Grupo</p>
+        <a href="" onmouseenter="Mudar_cor_botao_geral_entrou()" onmouseleave="Mudar_cor_botao_geral_saiu()"><img src="{{url_for('static', filename='img/Anielly Costa_Símbolo positivo@4x.png')}}" alt="imgproduto" class="imgproduto"></a>
+      </div>
+      
+      <div class="produto">
+        <p>Orientação Profissional</p>
+        <a href="" onmouseenter="Mudar_cor_botao_geral_entrou()" onmouseleave="Mudar_cor_botao_geral_saiu()"><img src="{{url_for('static', filename='img/Anielly Costa_Símbolo positivo@4x.png')}}" alt="imgproduto" class="imgproduto"></a>
+      </div>
+
+      <div class="produto">
+        <p>Avaliação Psicológica</p>
+        <a href=""onmouseenter="Mudar_cor_botao_geral_entrou()" onmouseleave="Mudar_cor_botao_geral_saiu()"><img src="{{url_for('static', filename='img/Anielly Costa_Símbolo positivo@4x.png')}}" alt="imgproduto" class="imgproduto"></a>
+      </div>
+
+      <div class="produto">
+        <p>Sobre mim</p>
+        <a href="" onmouseenter="Mudar_cor_botao_geral_entrou()" onmouseleave="Mudar_cor_botao_geral_saiu()"><img src="{{url_for('static', filename='img/Anielly Costa_Símbolo positivo@4x.png')}}" alt="imgproduto" class="imgproduto"></a>
+      </div>
+
+
+    </section>
+
+
+      
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+      <script src="{{ url_for('static', filename='js/teste.js') }}"></script>
+    </body>
 </html>
